completing project section in portfolio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="skill.html">Skill</a>
             </div>
             <div class="link">
-                <a href="">Projects</a>
+                <a href="project.html">Projects</a>
             </div>
             <div class="link">
                 <a href="edu.html">Edu/Exp</a>
@@ -59,7 +59,8 @@
     </div>
 
     <div class="circle-container">
-        <img src="https://media.tenor.com/FnM5KK8s_boAAAAe/anime-anime-boy.png" alt="">
+        <img src="https://scontent.fktm10-1.fna.fbcdn.net/v/t1.6435-9/113829361_602888047315567_3910467017820444125_n.jpg?stp=dst-jpg_p526x296&_nc_cat=107&ccb=1-7&_nc_sid=1d70fc&_nc_eui2=AeEyFQ2HwEV58KAVhsseLuDz27t3-DK0B3bbu3f4MrQHdh6alUAjymXsP6evYgHmjv97N6sc9sks9W6cl7khkLxE&_nc_ohc=c85nMHPG83oQ7kNvgHL3rQ8&_nc_ht=scontent.fktm10-1.fna&oh=00_AYDBaUcVdnAGWvO5UzXjwKuhVBCHUXdzR58aSlh88TVjZw&oe=66EEB860"
+            alt="">
     </div>
 
     <!------------- SKILLS ------------>
