--- a/project.html
+++ b/project.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <!------------  NAVIGATION MENU -------------->
     <div class="nav-toggle" onclick="toggleNav()">
         <span></span>
@@ -38,41 +37,43 @@
     </div>
     <!-- end of navigation mneu -->
 
-    <!------------- EDU/EXP ( EDUCATION & EXPERIENCE ) -------------->
-    <section class="edu-exp-section">
-        <div class="edu-head">
-            <h1>Education</h1>
+    <!-------------- PROJECT SECTION -------------->
+    <div class="project-head">
+        <h1>My Projects</h1>
+    </div>
+
+    <div class="project-container">
+        <div class="project-img">
+            <img src="assets/img/website-image.jpeg" alt="">
         </div>
-        <div class="edu-exp-container">
-            <span class="edu-date">
-                <h3>2016-2024</h3>
-            </span>
-            <span class="edu-description">
-                <h3>
-                    I began my educational journey in 2016. Now Iam in class 8
-                </h3>
-            </span>
-            <div class="edu-exp-line"></div>
-            <div class="edu-exp-line2"></div>
+        <div class="project-content">
+            <p>This is a ai image generate website</p>
         </div>
-    </section>
-    <section class="edu-exp-section2">
-        <div class="edu-head2">
-            <h1>EXPERIENCE</h1>
+        <div class="project-img2">
+            <img src="assets/img/ultr-edit-website.jpeg" alt="">
         </div>
-        <div class="edu-exp-container2">
-            <span class="edu-date2">
-                <h3>2024-2024</h3>
-            </span>
-            <span class="edu-description2">
-                <h3>
-                    I began my web development journey in 2024. Now I have almost 1 year of experience
-                </h3>
-            </span>
-            <div class="edu-exp-line3"></div>
-            <div class="edu-exp-line4"></div>
+        <div class="project-content2">
+            <p>This website is clone of Ultra Edit</p>
         </div>
-    </section>
+        <div class="project-img3">
+            <img src="assets/img/school-img.jpeg" alt="">
+        </div>
+        <div class="project-content3">
+            <p>This is my school website Shree Satyanarayan sSecondary School. In Nepal/Biratnagar</p>
+        </div>
+        <div class="project-img4">
+            <img src="assets/img/Netflix-image.jpeg" alt="">
+        </div>
+        <div class="project-content4">
+            <p>I cloned also Netflix front page</p>
+        </div>
+        <div class="project-img5">
+            <img src="assets/img/ai-img.jpeg" alt="">
+        </div>
+        <div class="project-content5">
+            <p>I made a AI voice asstant using chat gpt api</p>
+        </div>
+    </div>
 
     <!------------- FOOTER ------------->
     <footer>
