--- a/skill.html
+++ b/skill.html
@@ -29,7 +29,7 @@
                 <a href="skill.html">Skill</a>
             </div>
             <div class="link">
-                <a href="">Projects</a>
+                <a href="project.html">Projects</a>
             </div>
             <div class="link">
                 <a href="edu.html">Edu/Exp</a>
