completing project section in portfolio

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="about-me">
             <h1>About ME</h1>
             <div class="about-paragraph">
-                <p>Hi my name is Mohammad Sami Ali and Iam web developer from Nepal. Iam recently learning JavaScript &
+                <p>Hi my name is Mohammad Sami Ali and Iam web developer from Nepal.Iam a student of grade 8, Iam recently learning JavaScript &
                     NodeJS.
                 </p>
                 <p>I made so many projects some are School website, AI , Netflix etc.</p>
