removing hire section from portfolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,29 @@
             </div>
         </div>
     </div>
+    <div class="login-container">
+        <button class="login-button">Login</button>
+    </div>
     <!-- end of navigation mneu -->
+
+    <!--------------- MAKING LOGIN FORM -------------->
+    <div class="form-wrapper">
+        <div class="form-box login">
+            <h2>Login</h2>
+            <form action="">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" id="mail" required>
+                    <label for="mail">Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"></span>
+                    <input type="password" id="pass" required>
+                    <label for="pass">Password</label>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <div class="tittle-container">
         <h2>I'm</h2>
@@ -50,7 +72,8 @@
         <div class="about-me">
             <h1>About ME</h1>
             <div class="about-paragraph">
-                <p>Hi my name is Mohammad Sami Ali and Iam web developer from Nepal.Iam a student of grade 8, Iam recently learning JavaScript &
+                <p>Hi my name is Mohammad Sami Ali and Iam web developer from Nepal.Iam a student of grade 8, Iam
+                    recently learning JavaScript &
                     NodeJS.
                 </p>
                 <p>I made so many projects some are School website, AI , Netflix etc.</p>
@@ -93,63 +116,6 @@
             <span class="skill-logo">FIGMA</span>
             <p>Using Figma, I design intuitive and user-friendly interfaces, ensuring that the user journey is both
                 smooth and engaging.</p>
-        </div>
-    </div>
-
-    <div class="hire-me">
-        <h1>Hire Me</h1>
-    </div>
-    <div class="pricing-container">
-        <div class="pricing-box1">
-            <div class="pricing-head1">
-                <h1>Basic</h1>
-                <h3>10$</h3>
-            </div>
-            <div class="pricing-content1">
-                <ol>
-                    <li>Simple website design (up to 3 pages)</li>
-                    <li>Basic HTML and CSS styling</li>
-                    <li>Responsive design</li>
-                    <li>Basic SEO setup</li>
-                </ol>
-                <div class="buy-btn">
-                    <button>Subscribe</button>
-                </div>
-            </div>
-        </div>
-        <div class="pricing-box2">
-            <div class="pricing-head2">
-                <h1>Standard</h1>
-                <h3>20$</h3>
-            </div>
-            <div class="pricing-content2">
-                <ol>
-                    <li>Everything in the Basic package</li>
-                    <li>Up to 5 pages</li>
-                    <li>JavaScript interactivity (e.g., sliders, forms)</li>
-                    <li>Social media integration</li>
-                </ol>
-                <div class="buy-btn">
-                    <button>Subscribe</button>
-                </div>
-            </div>
-        </div>
-        <div class="pricing-box3">
-            <div class="pricing-head3">
-                <h1>Premium</h1>
-                <h3>40$</h3>
-            </div>
-            <div class="pricing-content3">
-                <ol>
-                    <li>Everything in the Standard package</li>
-                    <li>Custom animations and advanced JavaScript functionality</li>
-                    <li>E-commerce integration</li>
-                    <li>Ongoing support and updates for a specified period</li>
-                </ol>
-                <div class="buy-btn buy-btn2">
-                    <button>Subscribe</button>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -199,7 +165,10 @@
         </div>
 
     </footer>
+
     <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
