added link in button on project section in portfolio

--- a/project.html
+++ b/project.html
@@ -48,30 +48,35 @@
         </div>
         <div class="project-content">
             <p>This is a ai image generate website</p>
+             <a href="https://4ge101.github.io/first-advanced-website/"><button class="visit-site">Click to visit</button></a>
         </div>
         <div class="project-img2">
             <img src="assets/img/ultr-edit-website.jpeg" alt="">
         </div>
         <div class="project-content2">
             <p>This website is clone of Ultra Edit</p>
+             <a href="https://4ge101.github.io/Ultra-Edit-Website/"><button class="visit-site">Click to visit</button></a>
         </div>
         <div class="project-img3">
             <img src="assets/img/school-img.jpeg" alt="">
         </div>
         <div class="project-content3">
-            <p>This is my school website Shree Satyanarayan sSecondary School. In Nepal/Biratnagar</p>
+            <p>This is my school website Shree Satyanarayan Secondary School. In Nepal/Biratnagar</p>
+            <a href="https://4ge101.github.io/school_website/"><button class="visit-site">Click to visit</button></a>
         </div>
         <div class="project-img4">
             <img src="assets/img/Netflix-image.jpeg" alt="">
         </div>
         <div class="project-content4">
             <p>I cloned also Netflix front page</p>
+            <a href="https://4ge101.github.io/Netflix-Clone/"><button class="visit-site">Click to visit</button></a>
         </div>
         <div class="project-img5">
             <img src="assets/img/ai-img.jpeg" alt="">
         </div>
-        <div class="project-content5">
+        <div class="project-content5 last-project">
             <p>I made a AI voice asstant using chat gpt api</p>
+            <a href="https://4ge101.github.io/MEDUSA_AI/"><button class="visit-site">Click to visit</button></a>
         </div>
     </div>
 
