making new desgin portfolio

--- a/skill.html
+++ b/skill.html
@@ -14,7 +14,7 @@
 <body>
 
     <!------------  NAVIGATION MENU -------------->
-    <div class="nav-toggle" onclick="toggleNav()">
+    <!-- <div class="nav-toggle" onclick="toggleNav()">
         <span></span>
         <span></span>
         <span></span>
@@ -35,7 +35,7 @@
                 <a href="edu.html">Edu/Exp</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- end of navigation mneu -->
 
     <!------------- SKILLS ------------>
