--- a/index.html
+++ b/index.html
@@ -12,163 +12,35 @@
 </head>
 
 <body>
-
-    <!------------  NAVIGATION MENU -------------->
-    <div class="nav-toggle" onclick="toggleNav()">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-    <div class="nav-overlay"></div>
-    <div class="nav">
-        <div class="links">
-            <div class="link">
-                <a href="index.html">Home</a>
-            </div>
-            <div class="link">
-                <a href="skill.html">Skill</a>
-            </div>
-            <div class="link">
-                <a href="project.html">Projects</a>
-            </div>
-            <div class="link">
-                <a href="edu.html">Edu/Exp</a>
-            </div>
-        </div>
-    </div>
-    <div class="login-container">
-        <button class="login-button">Login</button>
-    </div>
-    <!-- end of navigation mneu -->
-
-    <!--------------- MAKING LOGIN FORM -------------->
-    <div class="form-wrapper">
-        <div class="form-box login">
-            <h2>Login</h2>
-            <form action="">
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" id="mail" required>
-                    <label for="mail">Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"></span>
-                    <input type="password" id="pass" required>
-                    <label for="pass">Password</label>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <div class="tittle-container">
-        <h2>I'm</h2>
-        <h1>Ali Sami</h1>
-        <p>Web Developer from Nepal</p>
-    </div>
-
-    <div class="curved-line-container">
-        <div class="curved-line1"></div>
-
-        <div class="about-me">
-            <h1>About ME</h1>
-            <div class="about-paragraph">
-                <p>Hi my name is Mohammad Sami Ali and Iam web developer from Nepal.Iam a student of grade 8, Iam
-                    recently learning JavaScript &
-                    NodeJS.
-                </p>
-                <p>I made so many projects some are School website, AI , Netflix etc.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="circle-container">
-        <img src="https://scontent.fktm10-1.fna.fbcdn.net/v/t1.6435-9/113829361_602888047315567_3910467017820444125_n.jpg?stp=dst-jpg_p526x296&_nc_cat=107&ccb=1-7&_nc_sid=1d70fc&_nc_eui2=AeEyFQ2HwEV58KAVhsseLuDz27t3-DK0B3bbu3f4MrQHdh6alUAjymXsP6evYgHmjv97N6sc9sks9W6cl7khkLxE&_nc_ohc=c85nMHPG83oQ7kNvgHL3rQ8&_nc_ht=scontent.fktm10-1.fna&oh=00_AYDBaUcVdnAGWvO5UzXjwKuhVBCHUXdzR58aSlh88TVjZw&oe=66EEB860"
-            alt="">
-    </div>
-
-    <!------------- SKILLS ------------>
-
-    <div class="skill-head">
-        <h1>Skills</h1>
-    </div>
-    <div class="skill-container">
-        <div class="skill">
-            <i class="fa-brands fa-html5" style="color: #ff0000;"></i>
-            <span class="skill-logo">HTML</span>
-            <p>The backbone of web content, I use HTML to structure web pages efficiently and semantically.</p>
-        </div>
-        <div class="skill">
-            <i class="fa-brands fa-css3-alt" style="color: #0055ff;"></i>
-            <span class="skill-logo">CSS</span>
-            <p>Bringing designs to life with CSS, I create responsive and visually appealing web layouts.</p>
-        </div>
-        <div class="skill">
-            <i class="fa-brands fa-js" style="color: #FFD43B;"></i>
-            <span class="skill-logo">JS</span>
-            <p>With JavaScript, I add interactivity and dynamic elements to web applications, enhancing user
-                experiences.</p>
-        </div>
-    </div>
-
-    <div class="skill-container2">
-        <div class="skill">
-            <i class="fa-brands fa-figma" style="color: #ffffff;"></i>
-            <span class="skill-logo">FIGMA</span>
-            <p>Using Figma, I design intuitive and user-friendly interfaces, ensuring that the user journey is both
-                smooth and engaging.</p>
-        </div>
-    </div>
-
-    <!------------- FOOTER ------------->
-    <footer>
-
-        <div class="footer-row">
-            <h3>Contact Us</h3>
-            <h3>Location</h3>
-            <h3>Social Media</h3>
-        </div>
-
-        <div class="footer">
-            <div class="footer-col">
+    <header class="nav-container">
+        <div class="logo"><i class="fa-solid fa-infinity"></i></div>
+        <div class="nav-menu">
+            <nav>
                 <ul>
-                    <li>Email</li>
-                    <li>alisami432t@gmail.com</li>
-                    <li>Number</li>
-                    <li>9779762945553</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Portfolio</a></li>
                 </ul>
-            </div>
-            <div class="footer-col location">
-                <ul>
-                    <li>Nepal/Biratnagar</li>
-                </ul>
-            </div>
-            <div class="form-box">
-                <div class="form">
-                    <label for="mail"></label>
-                    <input type="text" id="mail" placeholder="Enter Email..">
-                    <button>Subscribe</button>
-                </div>
-            </div>
-            <div class="footer-col social-media">
-                <ul>
-                    <li>Facebook</li>
-                    <li><a
-                            href="https://www.facebook.com/sammiali64?mibextid=ZbWKwL">https://www.facebook.com/sammiali64?mibextid=ZbWKwL</a>
-                    </li>
-                    <li>GitHub</li>
-                    <li><a href="https://github.com/4ge101">https://github.com/4ge101</a></li>
-                </ul>
-            </div>
-            <div class="copy-right">
-                <p>&copy; 2024 Mohammad Sami Ali. All Rights Reserved.</p>
+            </nav>
+        </div>
+        <div class="single-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="44" height="44"
+                color="#000000" fill="none">
+                <path d="M4 8.5L20 8.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 15.5L20 15.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg></div>
+        <div class="icon-box">
+            <div class="social-links">
+
             </div>
         </div>
+    </header>
 
-    </footer>
+
+
 
     <script src="script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
