--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 
 <body>
     <!------------  NAVIGATION MENU -------------->
-    <div class="nav-toggle" onclick="toggleNav()">
+    <!-- <div class="nav-toggle" onclick="toggleNav()">
         <span></span>
         <span></span>
         <span></span>
@@ -34,7 +34,7 @@
                 <a href="edu.html">Edu/Exp</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- end of navigation mneu -->
 
     <!-------------- PROJECT SECTION -------------->
