making new desgin portfolio

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header class="nav-container">
-        <div class="logo"><i class="fa-solid fa-infinity"></i></div>
         <div class="nav-menu">
             <nav>
+                <div class="logo"><i class="fa-solid fa-infinity"></i></div>
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About us</a></li>
@@ -29,16 +29,75 @@
                     stroke-linejoin="round" />
                 <path d="M4 15.5L20 15.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
                     stroke-linejoin="round" />
-            </svg></div>
+            </svg>
+        </div>
         <div class="icon-box">
             <div class="social-links">
-
+                <span><i class="fa-brands fa-facebook"></i></span>
+                <span><i class="fa-brands fa-discord"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+                <span><i class="fa-brands fa-telegram"></i></span>
             </div>
+        </div>
+        <div class="text">
+            <span>SA</span>
+            <span>MI</span>
         </div>
     </header>
 
+    <main>
+        <div class="head">
+            <h1>Skyrockets your business with <span>elevate</span></h1>
+        </div>
 
-
+        <div class="content">
+            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, perferendis magni fuga beatae
+                pariatur
+                rerum iusto, ullam eligendi itaque sequi enim sint, esse quos excepturi quo dolores officiis odio ut?
+            </span>
+            <span class="circle-arrow">
+                <i class="fa-solid fa-circle-arrow-down fa-flip-vertical"></i>
+            </span>
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <div class="box1">
+                    <div class="half-circle"><i class="fa-solid fa-arrow-down" style="color: #fafcff;"></i></div>
+                </div>
+                <div class="box2">
+                    <span class="left-eye">
+                        <span class="eye-fill"></span>
+                        <span class="eye-line"></span>
+                        <sapn class="eye-ball-left"></sapn>
+                    </span>
+                    <span class="right-eye">
+                        <span class="eye-fill"></span>
+                        <span class="eye-line"></span>
+                        <sapn class="eye-ball-right"></sapn>
+                    </span>
+                </div>
+                <div class="box3">
+                    <img src="https://www.kroger.com/product/images/large/front/0072763832159" alt="">
+                    <div class="timer">
+                        <div class="time-circle">
+                            <i class="fa-regular fa-clock"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="box4">
+                    <div class="second-half-circle"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></div>
+                </div>
+                <div class="box5">
+                    <div class="d3-box"></div>
+                </div>
+                </div>
+                <div class="box6"></div>
+                <div class="box7"></div>
+                <div class="box8"></div>
+                <div class="box9"></div>
+            </div>
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
