making new desgin portfolio

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                     </span>
                 </div>
                 <div class="box3">
-                    <img src="https://www.kroger.com/product/images/large/front/0072763832159" alt="">
+                    <img style="height: 170px; width: 170px;"
+                        src="https://www.kroger.com/product/images/large/front/0072763832159" alt="">
                     <div class="timer">
                         <div class="time-circle">
                             <i class="fa-regular fa-clock"></i>
@@ -87,15 +88,34 @@
                 <div class="box4">
                     <div class="second-half-circle"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></div>
                 </div>
+                <div class="d3-box"></div>
+                <div class="d3-box2"></div>
+                <div class="d3-circle"></div>
+                <div class="d3-circle2"></div>
                 <div class="box5">
-                    <div class="d3-box"></div>
+                    <span><i class="fa-brands fa-bitcoin" style="color: #dbca0a;"></i></span>
+                    <span><i class="fa-brands bitcoin2 fa-bitcoin" style="color: #dbca0a;"></i></span>
+                    <span class="line"></span>
                 </div>
-                </div>
-                <div class="box6"></div>
-                <div class="box7"></div>
-                <div class="box8"></div>
-                <div class="box9"></div>
             </div>
+            <div class="box6">
+                <span class="emoji2"><i class="fa-solid fa-face-grin-wide"></i></span>
+                <span class="emoji1"><i class="fa-sharp fa-solid fa-face-grin-hearts"></i></span>
+                <span class="line2"></span>
+                <span><i class="fa-brands bitcoin3 fa-bitcoin" style="color: #dbca0a;"></i></span>
+                <h3>custo</h3>
+                <h3>mers</h3>
+            </div>
+            <div class="d3-circle3"></div>
+            <div class="d3-circle4"></div>
+            <div class="box7">
+                <img style="height: 140px; width: 140px;"
+                    src="https://img.freepik.com/premium-vector/dotted-simple-seamless-vector-pattern-pointed-background-surface_547648-1357.jpg"
+                    alt="">
+            </div>
+            <div class="box8"></div>
+            <div class="box9"></div>
+        </div>
         </div>
     </main>
 
