making new desgin portfolio

--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
                 <div class="box4">
                     <div class="second-half-circle"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></div>
                 </div>
+                <span class="emoji5"><i class="fa-solid fa-face-frown"></i></span>
                 <div class="d3-box"></div>
                 <div class="d3-box2"></div>
                 <div class="d3-circle"></div>
                 <div class="d3-circle2"></div>
+                <span class="emoji4"><i class="fa-solid fa-face-smile"></i></span>
                 <div class="box5">
+                    <span class="emoji3"><i class="fa-solid fa-face-grin-beam-sweat"></i></span>
                     <span><i class="fa-brands fa-bitcoin" style="color: #dbca0a;"></i></span>
                     <span><i class="fa-brands bitcoin2 fa-bitcoin" style="color: #dbca0a;"></i></span>
                     <span class="line"></span>
@@ -108,13 +111,17 @@
             </div>
             <div class="d3-circle3"></div>
             <div class="d3-circle4"></div>
+            <span class="emoji6"><i class="fa-solid fa-face-sad-tear"></i></span>
+            <span class="emoji7"><i class="fa-solid fa-face-dizzy"></i></span>
             <div class="box7">
                 <img style="height: 140px; width: 140px;"
                     src="https://img.freepik.com/premium-vector/dotted-simple-seamless-vector-pattern-pointed-background-surface_547648-1357.jpg"
                     alt="">
             </div>
             <div class="box8"></div>
-            <div class="box9"></div>
+            <div class="box9">
+                <div class="box91"></div>
+            </div>
         </div>
         </div>
     </main>
