increasing the size of box in portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <div class="logo"><i class="fa-solid fa-infinity"></i></div>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="">Home</a><p class="number1">01</p></li>
                     <li><a href="">About us</a></li>
                     <li><a href="">Portfolio</a></li>
                 </ul>
@@ -77,7 +77,7 @@
                     </span>
                 </div>
                 <div class="box3">
-                    <img style="height: 170px; width: 170px;"
+                    <img style="height: 250px; width: 250px;"
                         src="https://www.kroger.com/product/images/large/front/0072763832159" alt="">
                     <div class="timer">
                         <div class="time-circle">
@@ -114,13 +114,19 @@
             <span class="emoji6"><i class="fa-solid fa-face-sad-tear"></i></span>
             <span class="emoji7"><i class="fa-solid fa-face-dizzy"></i></span>
             <div class="box7">
-                <img style="height: 140px; width: 140px;"
+                <img style="height: 202px; width: 202px;"
                     src="https://img.freepik.com/premium-vector/dotted-simple-seamless-vector-pattern-pointed-background-surface_547648-1357.jpg"
                     alt="">
             </div>
-            <div class="box8"></div>
+            <div class="box8">
+                <span class="tooltip-icon1"><img src="assets/icons/Side=Bottom, Dark=False, Size=Small.svg"></span>
+                <span class="tooltip-icon2"><img src="assets/icons/Tooltip.svg"></span>
+                <p class="tooltip-text">need!</p>
+            </div>
             <div class="box9">
-                <div class="box91"></div>
+                <div class="box91">
+                    <div class="dot-91"><i class="fa-solid logo-2 fa-infinity"></i></div>
+                </div>
             </div>
         </div>
         </div>
