added footer in portfolio

--- a/index.html
+++ b/index.html
@@ -181,6 +181,75 @@
         </div>
     </section>
 
+    <section class="card-container">
+        <div class="card1">
+            <div class="card-top">
+                <div class="card-name1">SOCIAL MEDIA</div>
+                <div class="card-icon1"><i class="fa-solid fa-arrow-right"></i></div>
+            </div>
+            <div class="card-img"><img src="assets/card-logo/eye-removebg-preview.png"></div>
+            <div class="card-decsription">hello eyeryone my name is Mohammad Sami Ali and iam a web developer from nepal
+                and iam a student of garde 8 of shree satyanarayan secondary school from nepal if you want to</div>
+        </div>
+        <div class="card2">
+            <div class="card-top2">
+                <div class="card-name2">CONTENT STARTEGY</div>
+                <div class="card-icon2"><i class="fa-solid fa-arrow-right"></i></div>
+            </div>
+            <div class="card-img2">
+                <img
+                    src="assets/card-logo/Animal_and_Bird_stencils_from_The_Stencil_Library__Buy_from_our_range_of_Animal_and_Bird_stencils_online-removebg-preview.png">
+            </div>
+            <div class="card-decsription2">hello eyeryone my name is Mohammad Sami Ali and iam a web developer from
+                nepal and iam a student of garde 8 of shree satyanarayan secondary school from nepal if you want to
+            </div>
+        </div>
+        <div class="card3">
+            <div class="card-top3">
+                <div class="card-name3">EVENT MARKETING</div>
+                <div class="card-icon3"><i class="fa-solid fa-arrow-right"></i></div>
+            </div>
+            <div class="card-img3">
+                <i class="fa-regular fa-circle-play"></i>
+                <img src="assets/card-logo/original-coding-removebg-preview.png">
+            </div>
+            <div class="card-decsription3">hello eyeryone my name is Mohammad Sami Ali and iam a web developer from
+                nepal and iam a student of garde 8 of shree satyanarayan secondary school from nepal if you want to
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-row">
+            <div class="footer-logo">
+                <span><i class="fa-solid fa-infinity"></i></span>
+            </div>
+            <ul>
+                <li>ABOUT US</li>
+                <li>EXPLORE</li>
+                <li>CONTACT US</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <p>Hello iam a webdeveloper from Nepal and iam a class 8 student there is no our team but i can provide you the best features</p>
+            <ul>
+                <li><a href="">ABOUT US</a></li>
+                <li><a href="">PROJECTS</a></li>
+                <li><a href="">SKILLS</a></li>
+                <li><a href="">EDU/EXP</a></li>
+            </ul>
+            <ul class="footer-contact">
+                <li>alisami432t@gmail.com</li>
+            </ul>
+        </div>
+        <div class="social-media-link">
+            <span class="facebook-footer-icon"><i class="fa-brands fa-facebook" style="color: #2283ce;"></i></span>
+            <span class="discord-footer-icon"><i class="fa-brands fa-discord" style="color: #ffffff;"></i></span>
+            <span><i class="fa-brands fa-linkedin" style="color: #0b53d0;"></i></span>
+            <span><i class="fa-brands fa-telegram" style="color: #1678d4;"></i></span>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
