--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <span class="emoji4"><i class="fa-solid fa-face-smile"></i></span>
                 <div class="box5">
                     <span class="emoji3"><i class="fa-solid fa-face-grin-beam-sweat"></i></span>
-                    <span><i class="fa-brands fa-bitcoin" style="color: #dbca0a;"></i></span>
+                    <span><i class="fa-brands bitcoin1 fa-bitcoin" style="color: #dbca0a;"></i></span>
                     <span><i class="fa-brands bitcoin2 fa-bitcoin" style="color: #dbca0a;"></i></span>
                     <span class="line"></span>
                 </div>
@@ -226,38 +226,6 @@
             </div>
         </div>
     </section>
-
-    <footer>
-        <div class="footer-row">
-            <div class="footer-logo">
-                <span><i class="fa-solid fa-infinity"></i></span>
-            </div>
-            <ul>
-                <li>ABOUT US</li>
-                <li>EXPLORE</li>
-                <li>CONTACT US</li>
-            </ul>
-        </div>
-        <div class="footer-col">
-            <p>Hello iam a webdeveloper from Nepal and iam a class 8 student there is no our team but i can provide you
-                the best features</p>
-            <ul>
-                <li><a href="">ABOUT US</a></li>
-                <li><a href="">PROJECTS</a></li>
-                <li><a href="">SKILLS</a></li>
-                <li><a href="">EDU/EXP</a></li>
-            </ul>
-            <ul class="footer-contact">
-                <li>alisami432t@gmail.com</li>
-            </ul>
-        </div>
-        <div class="social-media-link">
-            <span class="facebook-footer-icon"><i class="fa-brands fa-facebook" style="color: #2283ce;"></i></span>
-            <span class="discord-footer-icon"><i class="fa-brands fa-discord" style="color: #ffffff;"></i></span>
-            <span><i class="fa-brands fa-linkedin" style="color: #0b53d0;"></i></span>
-            <span><i class="fa-brands fa-telegram" style="color: #1678d4;"></i></span>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
