started to fixing overflow in responsive

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <nav>
                 <div class="logo"><i class="fa-solid fa-infinity"></i></div>
                 <ul class="sidebar-menu">
-                    <li class="menu-btn" onclick=hideSidebar()><i class="fa-solid fa-xmark"></i></li>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Portfolio</a></li>
+                    <li class="menu-btn menu-btn2" onclick=hideSidebar()><i class="fa-solid fa-xmark"></i></li>
+                    <div class="responsive-wrapper">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Portfolio</a></li>
+                    </div>
                 </ul>
                 <ul>
                     <li class="hideOnMobile"><a href="">Home</a>
@@ -32,7 +34,7 @@
                     <li class="hideOnMobile"><a href="">Portfolio</a>
                         <p class="number3">03</p>
                     </li>
-                    <li class="menu-btn" onclick=showSidebar()><i class="fa-solid fa-bars-staggered"></i></li>
+                    <li class="menu-btn menu-btn1" onclick=showSidebar()><i class="fa-solid fa-bars-staggered"></i></li>
                 </ul>
             </nav>
         </div>
